# calculate_buddhabrot

./: .gitignore  README.md  calculate_buddhabrot.py  pyproject.toml
