[tool.poetry]
name = "calculate-buddhabrot"
version = "0.1.0"
description = ""
authors = ["tubone <tubo.yyyuuu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.0"
numba = "^0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
